# proof

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  Makefile.toml  README.md  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
.github/workflows/: ci.yaml
.samples/: didion.json  didkey.json  didweb.json  didwebvh.json
azure_kv/: Cargo.toml
azure_kv/src/: auth.rs  client.rs  error.rs  key_bundle.rs  keyring.rs  signer.rs
crates/azure-kv/: Cargo.toml
crates/azure-kv/src/: auth.rs  client.rs  key_bundle.rs  keyring.rs  lib.rs  signer.rs
crates/did/: Cargo.toml
crates/did-core/: Cargo.toml
crates/did-core/src/: document.rs  error.rs  hashing.rs  keys.rs  lib.rs  registrar.rs  resolver.rs
crates/did-core/src/document/: context.rs  patch.rs  service.rs  verification_method.rs
crates/did-core/src/document/snapshots/: vercre_didcore__document__context__tests__deserialize_maps.snap  vercre_didcore__document__context__tests__deserialize_mix.snap  vercre_didcore__document__context__tests__deserialize_single.snap  vercre_didcore__document__context__tests__deserialize_strings.snap  vercre_didcore__document__patch__tests__patch_add_key.snap  vercre_didcore__document__patch__tests__patch_add_service.snap  vercre_didcore__document__patch__tests__patch_remove_key.snap  vercre_didcore__document__patch__tests__patch_remove_service.snap  vercre_didcore__document__patch__tests__patch_replace.snap  vercre_didcore__document__service__tests__deserialize_maps.snap  vercre_didcore__document__service__tests__deserialize_mix.snap  vercre_didcore__document__service__tests__deserialize_single_map.snap  vercre_didcore__document__service__tests__deserialize_single_string.snap  vercre_didcore__document__service__tests__deserialize_strings.snap  vercre_didcore__document__tests__deserialize_embedded_keys.snap  vercre_didcore__document__tests__deserialized_referenced_keys.snap  vercre_didcore__document__tests__serialize_constructed_doc.snap  vercre_didcore__document__tests__serialize_embedded_keys.snap  vercre_didcore__document__tests__serialize_referenced_keys.snap
crates/did-core/src/keys/: signer.rs
crates/did-core/src/serde/: flexvec_or_single.rs  option_flexvec.rs  option_flexvec_or_single.rs
crates/did-core/src/snapshots/: vercre_didcore__resolver__tests__deserialize_resolution.snap
crates/did-core/src/test_utils/: keyring.rs  mod.rs  signer.rs
crates/did-ion/: Cargo.toml
crates/did-ion/src/: ion.rs  lib.rs  registrar.rs  resolver.rs
crates/did-jwk/: Cargo.toml
crates/did-jwk/src/: jwk.rs  lib.rs  registrar.rs  resolver.rs
crates/did-jwk/src/snapshots/: vercre_didjwk__resolver__tests__resolve_secp256k1_did.snap
crates/did-web/: Cargo.toml
crates/did-web/src/: lib.rs  registrar.rs  resolver.rs  web.rs
crates/did/examples/webvh/: Cargo.toml
crates/did/examples/webvh/src/: create.rs  deactivate.rs  log.rs  resolve.rs  update.rs
crates/keyring/: Cargo.toml
crates/keyring/src/: keyring.rs  lib.rs  secp256k1.rs  signer.rs
crates/kms/: Cargo.toml
crates/kms/src/: lib.rs
crates/test-signer/: Cargo.toml
crates/test-utils/: Cargo.toml
crates/test-utils/src/: docstore.rs  lib.rs
did/: Cargo.toml  README.md
did/examples/webvh/src/: state.rs
did/src/: document.rs  handlers.rs  lib.rs  provider.rs  resolve.rs  service.rs  verification.rs  web.rs  webvh.rs
did/src/handlers/: document.rs
did/src/web/: create.rs  did-ecdsa.json  resolve.rs
did/src/webvh/: create.rs  resolve.rs
did/tests/: web_create.rs  web_dereference.rs  webvh_create.rs  webvh_deactivate.rs  webvh_resolve.rs  webvh_update.rs  webvh_verify.rs
didcore/: Cargo.toml
didcore/src/: error.rs  resolver.rs
didcore/src/document/: mod.rs
didcore/src/document/snapshots/: didcore__document__tests__deserialize_embedded_keys.snap  didcore__document__tests__deserialized_referenced_keys.snap  didcore__document__tests__serialize_constructed_doc.snap  didcore__document__tests__serialize_embedded_keys.snap  didcore__document__tests__serialize_referenced_keys.snap
didcore/src/keys/: signer.rs
didcore/src/serde/: flexvec_or_single.rs  mod.rs  option_flexvec.rs  option_flexvec_or_single.rs
didcore/src/snapshots/: didcore__resolver__tests__deserialize_resolution.snap
didcore/test_data/: resolved_doc.json
didion/: Cargo.toml
didion/src/: ion.rs  lib.rs  registrar.rs  resolver.rs
didkey/: Cargo.toml
didkey/src/: lib.rs
didweb/: Cargo.toml
didweb/src/: registrar.rs  resolver.rs  web.rs
examples/ion/: Cargo.toml  resolve.sh
examples/jwk/: Cargo.toml
examples/kms/: Cargo.toml
examples/universal-resolver/: Cargo.toml  resolve.sh
examples/web/: Cargo.toml
examples/web/.well-known/: did.json
examples/web/src/: main.rs
examples/webvh/: Cargo.toml  README.md
examples/webvh/src/: create.rs  deactivate.rs  keyring.rs  log.rs  main.rs  resolve.rs  state.rs  update.rs
identity/: Cargo.toml
identity/src/: lib.rs
proof/: Cargo.toml
proof/src/: lib.rs  provider.rs
proof/src/handlers/: document.rs
src/: core.rs  create.rs  did.rs  document.rs  error.rs  handlers.rs  jwk.rs  key.rs  lib.rs  lib.rs.orig  operation.rs  proof.rs  provider.rs  resolution.rs  resolve.rs  url.rs  web.rs  webvh.rs
src/did/: document.rs  key.rs  provider.rs  resolve.rs  service.rs  url.rs  verification.rs  web.rs  webvh.rs
src/document/: builders.rs
tests/: web_create.rs  web_dereference.rs  webvh_create.rs  webvh_deactivate.rs  webvh_resolve.rs  webvh_update.rs  webvh_verify.rs
vercre-azurekv/: Cargo.toml
vercre-didcore/: Cargo.toml
vercre-didion/: Cargo.toml
vercre-didion/src/: ion.rs  registrar.rs  resolver.rs
vercre-didjwk/: Cargo.toml
vercre-didjwk/src/: jwk.rs  lib.rs  registrar.rs  resolver.rs
vercre-didjwk/src/snapshots/: vercre_didjwk__registrar__tests__create.snap  vercre_didjwk__resolver__tests__resolve_secp256k1_did.snap
vercre-didkey/: Cargo.toml
vercre-didweb/: Cargo.toml
vercre-didweb/src/: lib.rs  registrar.rs  resolver.rs  web.rs
vercre-ephemeral-keyring/: Cargo.toml
vercre-ephemeral-keyring/src/: keyring.rs  lib.rs  secp256k1.rs  signer.rs
(+123 files in other folders)
