[workspace]
members = ["did", "proof"]
resolver = "3"

[workspace.package]
authors = ["Credibil"]
description = """
Decentralized Identifier (DID) and X509 utilities for Rust. See features for implemented DID methods and key
management or use core functionality to implement your own.
"""
edition = "2024"
exclude = [".*", "/docs", "snapshots/"]
homepage = "https://credibil.io"
keywords = ["decentralized", "identity", "did"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/credibil/proof"
rust-version = "1.87"
version = "0.1.2"

[workspace.lints.rust]
missing_docs = "warn"
unused_extern_crates = "warn"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"

[workspace.dependencies]
anyhow = "1.0.98"
credibil-core = { git = "https://github.com/credibil/core.git" }
credibil-did = { path = "did" }
credibil-ecc = { git = "https://github.com/credibil/key.git" }
credibil-jose = { git = "https://github.com/credibil/key.git" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140", features = ["alloc"] }
test-utils = { path = "crates/test-utils" }
tracing = "0.1.41"

# [patch."https://github.com/credibil/key"]
# credibil-ecc = { path = "../key/ecc" }
# credibil-jose = { path = "../key/jose" }
