[package]
name = "credibil-proof"
description = "Credibil proof utilities"
readme = "README.md"
authors.workspace = true
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
credibil-core.workspace = true
credibil-did.workspace = true
credibil-ecc.workspace = true
credibil-jose.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true

[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
authors = ["Credibil"]
description = """
Decentralized Identifier (DID) and X509 utilities for Rust. See features for implemented DID methods and key
management or use core functionality to implement your own.
"""
edition = "2024"
exclude = [".*", "/docs", "snapshots/"]
homepage = "https://credibil.io"
keywords = ["decentralized", "identity", "did"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/credibil/proof"
rust-version = "1.87"
version = "0.1.2"

[workspace.lints.rust]
missing_docs = "warn"
unused_extern_crates = "warn"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"

[workspace.dependencies]
anyhow = "1.0.98"
credibil-core = { git = "https://github.com/credibil/core.git" }
credibil-did = { path = "crates/did" }
credibil-ecc = { git = "https://github.com/credibil/key.git" }
credibil-jose = { git = "https://github.com/credibil/key.git" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140", features = ["alloc"] }
test-utils = { path = "crates/test-utils" }
tracing = "0.1.41"

# [patch."https://github.com/credibil/key"]
# credibil-ecc = { path = "../key/ecc" }
# credibil-jose = { path = "../key/jose" }
