[package]
name = "credibil-did"
description = "Key management sample code for testing"
readme = "README.md"
authors.workspace = true
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
chrono = { version = "0.4.41", features = ["serde"] }
credibil-core.workspace = true
credibil-ecc.workspace = true
credibil-jose.workspace = true
dashmap = "6.1.0"
multibase = "0.9.1"
nom = "8.0.0"
serde.workspace = true
serde_json.workspace = true
serde_json_canonicalizer = "0.3.0"
sha2 = "0.10.9"
tracing = "0.1.41"
url = "2.5.4"
uuid = { version = "1.17.0", features = ["v4"] }

[dev-dependencies]
axum = "0.8.4"
serde-jsonlines = "0.7.0"
serde_json.workspace = true
test-utils.workspace = true
tokio = { version = "1.45.1", features = ["full"] }
tower-http = { version = "0.6.6", features = ["fs"] }

# [examples]
