[package]
authors = ["Credibil"]
categories = ["decentralized identity", "privacy", "security", "verifiable credentials"]
description = "DID Core Rust library"
edition = "2021"
license = "MIT"
name = "didcore"
repository = "https://github.com/credibil/did/didcore"
version = "0.0.1"

[lib]
name = "didcore"
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.75"
base64ct = { version = "1.6.0", default-features = false, features = ["std"] }
chrono = "0.4.31"
ecdsa = { version = "0.16.9", default-features = false, features = ["arithmetic", "der", "signing"] }
hex = "0.4.3"
k256 = { version = "0.13.2", features = ["jwk"] }
multihash = "0.19.1"
oauth2 = "4.4.2"
olpc-cjson = "0.1.3"
rand = { version = "0.8.5", features = ["std_rng"] }
regex = "1.10.2"
reqwest = { version = "0.11.22", features = ["json"] }
secp256k1 = { version = "0.28.0", features = ["rand-std", "hashes-std"] }
serde.workspace = true
serde_json.workspace = true
sha2 = "0.10.8"
thiserror = "1.0.50"
tracing.workspace = true
url = "2.5.0"

[dev-dependencies]
insta = { version = "1.34.0", features = ["redactions", "yaml"] }
tokio = { version = "1.35.0", features = ["full"] }
tracing-subscriber = "0.3.18"
