[package]
authors = ["Credibil"]
categories = ["decentralized identity", "privacy", "security", "verifiable credentials"]
description = "DID ION implementation in Rust"
edition = "2021"
license = "MIT"
name = "didion"
repository = "https://github.com/credibil/did/didion"
version = "0.0.1"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
argon2 = "0.5.2"
base64ct = { version = "1.6.0", default-features = false, features = ["std"] }
chrono = "0.4.31"
didcore = { path = "../didcore" }
olpc-cjson = "0.1.3"
reqwest = { version = "0.11.22", features = ["json"] }
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true

[dev-dependencies]
azure-kv = { path = "../azure_kv" }
ecdsa = "0.16.9"
k256 = { version="0.13.2", features=["jwk"] }
rand = "0.8.5"
sha2 = "0.10.8"
tokio = { version = "1.35.0", features = ["full"] }
