[package]
authors = ["Credibil"]
categories = ["decentralized identity", "privacy", "security", "verifiable credentials"]
description = "DID Key implementation in Rust"
edition = "2021"
license = "MIT"
name = "didkey"
repository = "https://github.com/credibil/did/didkey"
version = "0.0.1"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
