[package]
authors = ["Credibil"]
categories = ["decentralized identity", "privacy", "security", "verifiable credentials"]
description = "DID Web implementation in Rust"
edition = "2021"
license = "MIT"
name = "didweb"
repository = "https://github.com/credibil/openid4v/did"
version = "0.0.1"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
didcore = { path= "../didcore" }
reqwest = { version = "0.11.22", features = ["json"] }
serde.workspace = true
tracing.workspace = true
