[package]
name = "credibil-identity"
description = "Credibil identity management utilities"
readme = "README.md"
authors.workspace = true
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[lints]
workspace = true

[dependencies]
credibil-did.workspace = true
credibil-ecc.workspace = true
credibil-jose.workspace = true
