[package]
authors = ["Credibil"]
categories = ["decentralized identity", "privacy", "security", "verifiable credentials"]
description = "DID ION implementation in Rust"
edition = "2021"
license = "MIT or Apache-2.0"
name = "vercre-didion"
repository = "https://github.com/vercre/vercre-did/vercre-didion"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
argon2 = "0.5.2"
base64ct = { version = "1.6.0", default-features = false, features = ["std"] }
chrono = "0.4.31"
vercre-didcore = { version = "0.1.0", path = "../vercre-didcore" }
olpc-cjson = "0.1.3"
reqwest = { version = "0.11.23", features = ["json"] }
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true

[dev-dependencies]
vercre-azurekv = { version = "0.1.0", path = "../vercre-azurekv" }
ecdsa = "0.16.9"
k256 = { version="0.13.3", features=["jwk"] }
rand = "0.8.5"
sha2 = "0.10.8"
tokio = { version = "1.35.1", features = ["full"] }
