[package]
authors = ["Credibil"]
categories = ["decentralized identity", "privacy", "security", "verifiable credentials"]
description = "DID JWK implementation in Rust"
edition = "2021"
license = "MIT or Apache-2.0"
name = "vercre-didjwk"
repository = "https://github.com/vercre/vercre-did/vercre-didjwk"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
vercre-didcore = { version = "0.1.0", path = "../vercre-didcore" }
serde.workspace = true
tracing.workspace = true
