[package]
authors = ["Credibil"]
categories = ["decentralized identity", "privacy", "security", "verifiable credentials"]
description = "DID JWK implementation in Rust"
edition = "2021"
license = "MIT or Apache-2.0"
name = "vercre-didjwk"
repository = "https://github.com/vercre/vercre-did/vercre-didjwk"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
vercre-didcore = { version = "0.1.0", path = "../vercre-didcore" }
vercre-ephemeral-keyring = { version = "0.1.0", path = "../vercre-ephemeral-keyring" }
serde.workspace = true
tracing.workspace = true
serde_json = "1.0.111"
base64ct = "1.6.0"

[dev-dependencies]
insta = { version = "1.34.0", features = ["redactions", "yaml"] }
tokio = { version = "1.35.1", features = ["full"] }
