[package]
authors = ["Credibil"]
categories = ["decentralized identity", "privacy", "security", "verifiable credentials"]
description = "DID Key implementation in Rust"
edition = "2021"
license = "MIT or Apache-2.0"
name = "vercre-didkey"
repository = "https://github.com/vercre/vercre-did/vercre-didkey"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
