[package]
authors = ["Credibil"]
categories = ["decentralized identity", "privacy", "security", "verifiable credentials"]
description = "Azure Key Vault implementation of the vercre-did KeyRing and Signer traits"
edition = "2021"
license = "MIT or Apache-2.0"
name = "vercre-ephemeral-keyring"
repository = "https://github.com/vercre/vercre-did/vercre-ephemeral-keyring"
version = "0.1.0"

[lib]
name = "vercre_ephemeral_keyring"
crate-type = ["cdylib", "rlib"]

[dependencies]
ecdsa = "0.16.9"
k256 = { version = "0.13.3", features = ["jwk"] }
rand_core = { version = "0.6.4", features = ["getrandom"] }
serde_json = "1.0.111"
vercre-didcore = { version = "0.1.0", path = "../vercre-didcore" }

[dev-dependencies]
tokio = { version = "1.35.1", features = ["full"] }
