[package]
name = "did-core"
description = "DID Core Rust library"
authors.workspace = true
edition.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = "1.0.79"
base64ct = { version = "1.6.0", default-features = false, features = ["std"] }
ecdsa = { version = "0.16.9", default-features = false, features = [
    "arithmetic",
    "der",
    "signing",
] }
hex = "0.4.3"
k256 = { version = "0.13.3", features = ["jwk"] }
multihash = "0.19.1"
olpc-cjson = "0.1.3"
rand = { version = "0.8.5", features = ["std_rng"] }
regex = "1.10.2"
reqwest = { version = "0.11.23", features = ["json"] }
serde.workspace = true
serde_json.workspace = true
sha2 = "0.10.8"
thiserror = "1.0.56"
tracing.workspace = true
url = "2.5.0"

[dev-dependencies]
insta = { version = "1.34.0", features = ["redactions", "yaml"] }
tokio = { version = "1.35.1", features = ["full"] }
tracing-subscriber = "0.3.18"
