[package]
name = "did-ion"
description = "DID ION implementation in Rust"
authors.workspace = true
edition.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
argon2 = "0.5.3"
base64ct = { version = "1.6.0", default-features = false, features = ["std"] }
chrono = "0.4.38"
did-core = { version = "0.1.0", path = "../did-core" }
olpc-cjson = "0.1.4"
reqwest = { version = "0.12.8", features = ["json"] }
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true

[dev-dependencies]
azure-kv = { version = "0.1.0", path = "../azure-kv" }
ecdsa = "0.16.9"
k256 = { version = "0.13.4", features = ["jwk"] }
rand = "0.8.5"
sha2 = "0.10.8"
tokio = { version = "1.40.0", features = ["full"] }
