[package]
name = "did-jwk"
description = "DID JWK implementation in Rust"
authors.workspace = true
edition.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
did-core = { version = "0.1.0", path = "../did-core" }
keyring = { version = "0.1.0", path = "../keyring" }
serde.workspace = true
tracing.workspace = true
serde_json = "1.0.111"
base64ct = "1.6.0"

[dev-dependencies]
insta = { version = "1.34.0", features = ["redactions", "yaml"] }
tokio = { version = "1.35.1", features = ["full"] }
