[package]
name = "did-web"
description = "DID Web implementation in Rust"
authors.workspace = true
edition.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
did-core = { version = "0.1.0", path = "../did-core" }
reqwest = { version = "0.12.8", features = ["json"] }
tracing.workspace = true
