[package]
name = "keyring"
description = "Azure Key Vault implementation of the vercre-did KeyRing and Signer traits"
authors.workspace = true
edition.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
base64ct = "1.6.0"
ecdsa = "0.16.9"
k256 = { version = "0.13.4", features = ["jwk"] }
rand = "0.8.5"
serde_json = "1.0.128"
sha2 = "0.10.8"
tracing.workspace = true
did-core = { version = "0.1.0", path = "../did-core" }

[dev-dependencies]
tokio = { version = "1.40.0", features = ["full"] }
