[package]
name = "test-signer"
authors.workspace = true
description.workspace = true
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme = "README.md"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
base64ct.workspace = true
credibil-infosec.workspace = true
ed25519-dalek.workspace = true
multibase.workspace = true
rand = "0.8.5"
sha2.workspace = true
x25519-dalek.workspace = true
