[package]
name = "test-utils"
authors.workspace = true
description = "Key management sample code for testing"
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme = "README.md"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
credibil-ecc.workspace = true
dashmap = "6.1.0"
