[package]
name = "web"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = "1.0.79"
axum = "0.7.3"
serde.workspace = true
serde_json.workspace = true
tokio = { version = "1.35.1", features = ["full"] }
tower-http = { version = "0.5.0", features = ["fs"] }
vercre-did = { path = "../..", features = ["did-web"] }
