[package]
name = "web"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = "1.0.89"
axum = "0.7.7"
did-core.workspace = true
did-web.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { version = "1.40.0", features = ["full"] }
tower-http = { version = "0.6.1", features = ["fs"] }
vercre-did = { path = "../..", features = ["did-web"] }
