[package]
name = "webvh"
publish = false
edition.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
axum = { version = "0.8.3", features = ["macros"] }
axum-extra = { version = "0.10.1", features = ["typed-header", "json-lines"] }
base64ct.workspace = true
credibil-did.workspace = true
credibil-infosec.workspace = true
ed25519-dalek.workspace = true
futures-util = { version = "0.3.31", features = ["alloc"] }
kms.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { version = "1.44.1", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6.2", features = ["cors", "set-header", "trace"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
