[package]
name = "webvh"
publish = false
edition.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
axum = { version = "0.8.4", features = ["macros"] }
axum-extra = { version = "0.10.1", features = ["json-lines", "typed-header"] }
credibil-ecc.workspace = true
credibil-did.workspace = true
credibil-jose.workspace = true
futures-util = { version = "0.3.31", features = ["alloc"] }
serde.workspace = true
test-utils.workspace = true
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6.6", features = ["cors", "set-header", "trace"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
